--- a/notebooks/05_GUI_bokeh.ipynb
+++ b/notebooks/05_GUI_bokeh.ipynb
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,8 +511,8 @@
     "    accelerator.compile()\n",
     "    simulation=kv.Simulation(beam, accelerator)\n",
     "    simulation.track()\n",
-    "    sigma_x = simulation.envelope_x\n",
-    "    sigma_y = simulation.envelope_y\n",
+    "    sigma_x = simulation.envelope_x(accelerator.parameter)\n",
+    "    sigma_y = simulation.envelope_y(accelerator.parameter)\n",
     "    z_array = np.array_split(accelerator.parameter, 1)\n",
     "    Bz = accelerator.Bz(accelerator.parameter)\n",
     "    Bz_array =  np.array_split(Bz, 1)\n",
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -645,15 +645,23 @@
       "application/vnd.bokehjs_exec.v0+json": "",
       "text/html": [
        "\n",
-       "<script src=\"http://localhost:58276/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:58276&resources=none\" id=\"1003\"></script>"
+       "<script src=\"http://localhost:54514/autoload.js?bokeh-autoload-element=1003&bokeh-absolute-url=http://localhost:54514&resources=none\" id=\"1003\"></script>"
       ]
      },
      "metadata": {
       "application/vnd.bokehjs_exec.v0+json": {
-       "server_id": "65ca9714bd2642b38a281b031f65f8c2"
+       "server_id": "84623eabeb1546ad852ce1d205795266"
       }
      },
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "ERROR:bokeh.server.views.ws:Refusing websocket connection from Origin 'http://localhost:8903';                       use --allow-websocket-origin=localhost:8903 or set BOKEH_ALLOW_WS_ORIGIN=localhost:8903 to permit this; currently we allow origins {'localhost:8888'}\n",
+      "WARNING:tornado.access:403 GET /ws?bokeh-protocol-version=1.0&bokeh-session-id=S9o5dQLewyh3LEVxmgIRHzLOsnpie2Kv4kBvksV2IxQ1 (::1) 4.00ms\n"
+     ]
     }
    ],
    "source": [
