--- a/notebooks/02_tutorial.ipynb
+++ b/notebooks/02_tutorial.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <a href=https://github.com/fuodorov/kenv>KENV</a> tutorial\n",
+    "# [KENV](https://github.com/fuodorov/kenv) tutorial\n",
     "The solver of Kapchinsky-Vladimirsky envelope equation for electron beam with space charge.\n",
     "\n",
     "[V. Fedorov](mailto:fuodorov1998@gmail.com), [D. Nikiforov](mailto:D.A.Nikiforov@inp.nsk.su), [A. Petrenko](http://www.inp.nsk.su/~petrenko/) (Novosibirsk, 2019)\n",
