--- a/notebooks/07_manual.ipynb
+++ b/notebooks/07_manual.ipynb
@@ -26,6 +26,26 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.1.9.1'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "kv.__version__"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1330,92 +1350,92 @@
       "application/vnd.holoviews_exec.v0+json": "",
       "text/html": [
        "<div class=\"hololayout row row-fluid\">\n",
-       "  <div class=\"holoframe\" id=\"display_area0a14f5fdf0cd4df180cb1be2eb297e93\">\n",
-       "    <div id=\"_anim_img0a14f5fdf0cd4df180cb1be2eb297e93\">\n",
+       "  <div class=\"holoframe\" id=\"display_area313e7bb041c143ec950a1b578ecff480\">\n",
+       "    <div id=\"_anim_img313e7bb041c143ec950a1b578ecff480\">\n",
        "      \n",
        "      \n",
        "      \n",
        "    </div>\n",
        "  </div>\n",
-       "  <div class=\"holowidgets\" id=\"widget_area0a14f5fdf0cd4df180cb1be2eb297e93\">\n",
-       "    <form class=\"holoform well\" id=\"form0a14f5fdf0cd4df180cb1be2eb297e93\">\n",
+       "  <div class=\"holowidgets\" id=\"widget_area313e7bb041c143ec950a1b578ecff480\">\n",
+       "    <form class=\"holoform well\" id=\"form313e7bb041c143ec950a1b578ecff480\">\n",
        "      \n",
        "      \n",
        "      <div class=\"form-group control-group holoformgroup\" style=''>\n",
-       "        <label for=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\">\n",
+       "        <label for=\"textInput313e7bb041c143ec950a1b578ecff480_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\">\n",
        "          <strong>Sol. 2 (Gs):</strong>\n",
        "        </label>\n",
        "        <div class=\"holowell\">\n",
        "          <div class=\"hologroup\">\n",
        "            <input type=\"text\" class=\"holotext form-control input-small\"\n",
-       "                   id=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\" value=\"\" readonly>\n",
+       "                   id=\"textInput313e7bb041c143ec950a1b578ecff480_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\" value=\"\" readonly>\n",
        "          </div>\n",
        "          <div class=\"holoslider\"\n",
-       "               id=\"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\"></div>\n",
+       "               id=\"_anim_widget313e7bb041c143ec950a1b578ecff480_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\"></div>\n",
        "        </div>\n",
        "      </div>\n",
        "      \n",
        "        \n",
        "      \n",
        "      <div class=\"form-group control-group holoformgroup\" style=''>\n",
-       "        <label for=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_dx_left_parenthesis_cm_right_parenthesis\">\n",
+       "        <label for=\"textInput313e7bb041c143ec950a1b578ecff480_dx_left_parenthesis_cm_right_parenthesis\">\n",
        "          <strong>dx (cm):</strong>\n",
        "        </label>\n",
        "        <div class=\"holowell\">\n",
        "          <div class=\"hologroup\">\n",
        "            <input type=\"text\" class=\"holotext form-control input-small\"\n",
-       "                   id=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_dx_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
+       "                   id=\"textInput313e7bb041c143ec950a1b578ecff480_dx_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
        "          </div>\n",
        "          <div class=\"holoslider\"\n",
-       "               id=\"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_dx_left_parenthesis_cm_right_parenthesis\"></div>\n",
+       "               id=\"_anim_widget313e7bb041c143ec950a1b578ecff480_dx_left_parenthesis_cm_right_parenthesis\"></div>\n",
        "        </div>\n",
        "      </div>\n",
        "      \n",
        "        \n",
        "      \n",
        "      <div class=\"form-group control-group holoformgroup\" style=''>\n",
-       "        <label for=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_dy_left_parenthesis_cm_right_parenthesis\">\n",
+       "        <label for=\"textInput313e7bb041c143ec950a1b578ecff480_dy_left_parenthesis_cm_right_parenthesis\">\n",
        "          <strong>dy (cm):</strong>\n",
        "        </label>\n",
        "        <div class=\"holowell\">\n",
        "          <div class=\"hologroup\">\n",
        "            <input type=\"text\" class=\"holotext form-control input-small\"\n",
-       "                   id=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_dy_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
+       "                   id=\"textInput313e7bb041c143ec950a1b578ecff480_dy_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
        "          </div>\n",
        "          <div class=\"holoslider\"\n",
-       "               id=\"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_dy_left_parenthesis_cm_right_parenthesis\"></div>\n",
+       "               id=\"_anim_widget313e7bb041c143ec950a1b578ecff480_dy_left_parenthesis_cm_right_parenthesis\"></div>\n",
        "        </div>\n",
        "      </div>\n",
        "      \n",
        "        \n",
        "      \n",
        "      <div class=\"form-group control-group holoformgroup\" style=''>\n",
-       "        <label for=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Part_x_left_parenthesis_cm_right_parenthesis\">\n",
+       "        <label for=\"textInput313e7bb041c143ec950a1b578ecff480_Part_x_left_parenthesis_cm_right_parenthesis\">\n",
        "          <strong>Part x (cm):</strong>\n",
        "        </label>\n",
        "        <div class=\"holowell\">\n",
        "          <div class=\"hologroup\">\n",
        "            <input type=\"text\" class=\"holotext form-control input-small\"\n",
-       "                   id=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Part_x_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
+       "                   id=\"textInput313e7bb041c143ec950a1b578ecff480_Part_x_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
        "          </div>\n",
        "          <div class=\"holoslider\"\n",
-       "               id=\"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Part_x_left_parenthesis_cm_right_parenthesis\"></div>\n",
+       "               id=\"_anim_widget313e7bb041c143ec950a1b578ecff480_Part_x_left_parenthesis_cm_right_parenthesis\"></div>\n",
        "        </div>\n",
        "      </div>\n",
        "      \n",
        "        \n",
        "      \n",
        "      <div class=\"form-group control-group holoformgroup\" style=''>\n",
-       "        <label for=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Part_y_left_parenthesis_cm_right_parenthesis\">\n",
+       "        <label for=\"textInput313e7bb041c143ec950a1b578ecff480_Part_y_left_parenthesis_cm_right_parenthesis\">\n",
        "          <strong>Part y (cm):</strong>\n",
        "        </label>\n",
        "        <div class=\"holowell\">\n",
        "          <div class=\"hologroup\">\n",
        "            <input type=\"text\" class=\"holotext form-control input-small\"\n",
-       "                   id=\"textInput0a14f5fdf0cd4df180cb1be2eb297e93_Part_y_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
+       "                   id=\"textInput313e7bb041c143ec950a1b578ecff480_Part_y_left_parenthesis_cm_right_parenthesis\" value=\"\" readonly>\n",
        "          </div>\n",
        "          <div class=\"holoslider\"\n",
-       "               id=\"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Part_y_left_parenthesis_cm_right_parenthesis\"></div>\n",
+       "               id=\"_anim_widget313e7bb041c143ec950a1b578ecff480_Part_y_left_parenthesis_cm_right_parenthesis\"></div>\n",
        "        </div>\n",
        "      </div>\n",
        "      \n",
@@ -1428,15 +1448,15 @@
        "var widget_ids = new Array(5);\n",
        "\n",
        "\n",
-       "widget_ids[0] = \"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\";\n",
+       "widget_ids[0] = \"_anim_widget313e7bb041c143ec950a1b578ecff480_Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis\";\n",
        "\n",
-       "widget_ids[1] = \"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_dx_left_parenthesis_cm_right_parenthesis\";\n",
+       "widget_ids[1] = \"_anim_widget313e7bb041c143ec950a1b578ecff480_dx_left_parenthesis_cm_right_parenthesis\";\n",
        "\n",
-       "widget_ids[2] = \"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_dy_left_parenthesis_cm_right_parenthesis\";\n",
+       "widget_ids[2] = \"_anim_widget313e7bb041c143ec950a1b578ecff480_dy_left_parenthesis_cm_right_parenthesis\";\n",
        "\n",
-       "widget_ids[3] = \"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Part_x_left_parenthesis_cm_right_parenthesis\";\n",
+       "widget_ids[3] = \"_anim_widget313e7bb041c143ec950a1b578ecff480_Part_x_left_parenthesis_cm_right_parenthesis\";\n",
        "\n",
-       "widget_ids[4] = \"_anim_widget0a14f5fdf0cd4df180cb1be2eb297e93_Part_y_left_parenthesis_cm_right_parenthesis\";\n",
+       "widget_ids[4] = \"_anim_widget313e7bb041c143ec950a1b578ecff480_Part_y_left_parenthesis_cm_right_parenthesis\";\n",
        "\n",
        "\n",
        "function create_widget() {\n",
@@ -1445,41 +1465,41 @@
        "  var keyMap = {};\n",
        "  var notFound = \"<h2 style='vertical-align: middle>No frame at selected dimension value.<h2>\";\n",
        "\n",
-       "  var anim = new HoloViews.MPLSelectionWidget(frame_data, \"0a14f5fdf0cd4df180cb1be2eb297e93\", widget_ids,\n",
+       "  var anim = new HoloViews.MPLSelectionWidget(frame_data, \"313e7bb041c143ec950a1b578ecff480\", widget_ids,\n",
        "  keyMap, dim_vals, notFound, false, \"default\",\n",
-       "  false, \"./json_figures/\", true, \"0a14f5fdf0cd4df180cb1be2eb297e93\");\n",
+       "  false, \"./json_figures/\", true, \"313e7bb041c143ec950a1b578ecff480\");\n",
        "\n",
-       "  HoloViews.index['0a14f5fdf0cd4df180cb1be2eb297e93'] = anim;\n",
+       "  HoloViews.index['313e7bb041c143ec950a1b578ecff480'] = anim;\n",
        "}\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "HoloViews.init_slider('0a14f5fdf0cd4df180cb1be2eb297e93', '0a14f5fdf0cd4df180cb1be2eb297e93', 'Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis', ['0.0', '1500.0'], {}, [], true, 1, 200.0, 'None', 0, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
+       "HoloViews.init_slider('313e7bb041c143ec950a1b578ecff480', '313e7bb041c143ec950a1b578ecff480', 'Sol_full_stop_2_left_parenthesis_Gs_right_parenthesis', ['0.0', '1500.0'], {}, [], true, 1, 200.0, 'None', 0, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "HoloViews.init_slider('0a14f5fdf0cd4df180cb1be2eb297e93', '0a14f5fdf0cd4df180cb1be2eb297e93', 'dx_left_parenthesis_cm_right_parenthesis', ['-5.0', '5.0'], {}, [], true, 0.1, 0.2, 'None', 1, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
+       "HoloViews.init_slider('313e7bb041c143ec950a1b578ecff480', '313e7bb041c143ec950a1b578ecff480', 'dx_left_parenthesis_cm_right_parenthesis', ['-5.0', '5.0'], {}, [], true, 0.1, 0.2, 'None', 1, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "HoloViews.init_slider('0a14f5fdf0cd4df180cb1be2eb297e93', '0a14f5fdf0cd4df180cb1be2eb297e93', 'dy_left_parenthesis_cm_right_parenthesis', ['-5.0', '5.0'], {}, [], true, 0.1, 0.3, 'None', 2, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
+       "HoloViews.init_slider('313e7bb041c143ec950a1b578ecff480', '313e7bb041c143ec950a1b578ecff480', 'dy_left_parenthesis_cm_right_parenthesis', ['-5.0', '5.0'], {}, [], true, 0.1, 0.3, 'None', 2, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "HoloViews.init_slider('0a14f5fdf0cd4df180cb1be2eb297e93', '0a14f5fdf0cd4df180cb1be2eb297e93', 'Part_x_left_parenthesis_cm_right_parenthesis', ['-7.0', '7.0'], {}, [], true, 0.1, 3.0, 'None', 3, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
+       "HoloViews.init_slider('313e7bb041c143ec950a1b578ecff480', '313e7bb041c143ec950a1b578ecff480', 'Part_x_left_parenthesis_cm_right_parenthesis', ['-7.0', '7.0'], {}, [], true, 0.1, 3.0, 'None', 3, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
        "\n",
        "\n",
        "\n",
        "\n",
        "\n",
-       "HoloViews.init_slider('0a14f5fdf0cd4df180cb1be2eb297e93', '0a14f5fdf0cd4df180cb1be2eb297e93', 'Part_y_left_parenthesis_cm_right_parenthesis', ['-7.0', '7.0'], {}, [], true, 0.1, -3.0, 'None', 4, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
+       "HoloViews.init_slider('313e7bb041c143ec950a1b578ecff480', '313e7bb041c143ec950a1b578ecff480', 'Part_y_left_parenthesis_cm_right_parenthesis', ['-7.0', '7.0'], {}, [], true, 0.1, -3.0, 'None', 4, 50, 'https://code.jquery.com/ui/1.10.4/jquery-ui.min.js', 'https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore-min.js')\n",
        "\n",
        "\n",
        "\n",
@@ -1510,7 +1530,7 @@
      "execution_count": 13,
      "metadata": {
       "application/vnd.holoviews_exec.v0+json": {
-       "id": "0a14f5fdf0cd4df180cb1be2eb297e93"
+       "id": "313e7bb041c143ec950a1b578ecff480"
       }
      },
      "output_type": "execute_result"
