--- a/docs/source/overview/theory.ipynb
+++ b/docs/source/overview/theory.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Theory"
+    "# Theory\n",
+    "The derivation of the Kapchinsky-Vladimirsky differential equations is shown here."
    ]
   },
   {
